test/fail/interpolation/interp_nested.lily
#[
SyntaxError: Nested interpolation is not allowed.
    from interp_nested.lily:6:
]#

var v = $"^( $"^(10)" )"
